--- a/package.json
+++ b/package.json
@@ -29,8 +29,9 @@
     "ngx-owl-carousel-o": "^7.0.2",
     "ngx-slick-carousel": "^0.6.0",
     "ngx-spinner": "^13.1.1",
-    "npn-slider": "^1.3.2",
     "ngx-toastr": "^14.3.0",
+    "npn-slider": "^1.3.2",
+    "react-toastify": "^9.0.1",
     "rxjs": "~7.5.0",
     "slick-carousel": "^1.8.1",
     "tsc-ui": "^0.0.6",
