--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bootstrap": "^4.6.0",
     "bootstrap-horizon": "^1.0.1",
     "bootswatch": "^5.1.3",
+    "carousel": "^0.0.3",
     "font-awesome": "^4.7.0",
     "ion-affix": "^1.1.1",
     "ngx-bootstrap": "^8.0.0",
