--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "ngx-bootstrap": "^8.0.0",
     "ngx-spinner": "^13.1.1",
     "ngx-toastr": "^14.3.0",
+    "node_module": "^0.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "uuid": "^8.3.2",
